installation and setup of containerized server

--- a/l10n-weblate/installation-and-upgrade.cfg
+++ b/l10n-weblate/installation-and-upgrade.cfg
@@ -39,6 +39,7 @@
 [type: asciidoc] modules/installation-and-upgrade/pages/proxy-y-z.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/proxy-y-z.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/pubcloud-requirements.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/pubcloud-requirements.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/pubcloud-setup.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/server-container-installation.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/server-container-installation.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/server-intro-uyuni.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/server-intro-uyuni.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/server-intro.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/server-intro.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -57,4 +58,5 @@
 [type: asciidoc] modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/uyuni-proxy-setup.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/uyuni-server-setup.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/uyuni-server-setup.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/server-container-setup.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/server-container-setup.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/webui-setup.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/webui-setup.adoc
