--- a/l10n-weblate/reference.cfg
+++ b/l10n-weblate/reference.cfg
@@ -38,6 +38,7 @@
 [type: asciidoc] modules/reference/pages/cli-mgrcfg.adoc $lang:translations/$lang/modules/reference/pages/cli-mgrcfg.adoc
 [type: asciidoc] modules/reference/pages/cli-smdba.adoc $lang:translations/$lang/modules/reference/pages/cli-smdba.adoc
 [type: asciidoc] modules/reference/pages/cli-sync.adoc $lang:translations/$lang/modules/reference/pages/cli-sync.adoc
+[type: asciidoc] modules/reference/pages/cli-container.adoc $lang:translations/$lang/modules/reference/pages/cli-container.adoc
 [type: asciidoc] modules/reference/pages/clm/clm-filters.adoc $lang:translations/$lang/modules/reference/pages/clm/clm-filters.adoc
 [type: asciidoc] modules/reference/pages/clm/clm-menu.adoc $lang:translations/$lang/modules/reference/pages/clm/clm-menu.adoc
 [type: asciidoc] modules/reference/pages/clm/clm-projects.adoc $lang:translations/$lang/modules/reference/pages/clm/clm-projects.adoc
