--- a/antora.yml
+++ b/antora.yml
@@ -1,5 +1,5 @@
-name: suse-manager
-title: SUSE Manager 4.3 Documentation
+name: uyuni
+title: Uyuni
 
 # Which branch is the default for this playbook.
 version: ~
