update versioning for postgresql, leap and salt

--- a/parameters.yml
+++ b/parameters.yml
@@ -61,11 +61,11 @@ products:
       - attribute: productname
         value: "Uyuni"
       - attribute: productnumber
-        value: "2023.04"
+        value: "2023.06"
       - attribute: docversion
-        value: "2023.04"
+        value: "2023.06"
       - attribute: minorversion
-        value: "2023.04"
+        value: "2023.06"
       - attribute: suma-content
         value: false
       - attribute: uyuni-content
@@ -167,8 +167,12 @@ targets: #Other makefile target not strictly related to book. These targets will
   - name: pdf-all-uyuni
     pre_lang_prerequisite: configure-uyuni
 asciidoc:
+  - attribute: opensuse-version
+    value: 15.5
   - attribute: saltversion
     value: 3006
+  - attribute: postgresql
+    value: 15
   - attribute: sles-version
     value: 15
   - attribute:  sp-version
@@ -179,8 +183,6 @@ asciidoc:
     value: sp3
   - attribute: smrproductnumber
     value: 4.3
-  - attribute: opensuse-version
-    value: 15.4
   - attribute: linkattrs
     value: true
   - attribute: sectlinks
