--- a/parameters.yml
+++ b/parameters.yml
@@ -167,8 +167,10 @@ targets: #Other makefile target not strictly related to book. These targets will
   - name: pdf-all-uyuni
     pre_lang_prerequisite: configure-uyuni
 asciidoc:
+  - attribute: postgresql
+    value: 15
   - attribute: saltversion
-    value: 3006
+    value: 3006.0
   - attribute: sles-version
     value: 15
   - attribute:  sp-version
@@ -180,7 +182,7 @@ asciidoc:
   - attribute: smrproductnumber
     value: 4.3
   - attribute: opensuse-version
-    value: 15.4
+    value: 15.5
   - attribute: linkattrs
     value: true
   - attribute: sectlinks
