--- a/parameters.yml
+++ b/parameters.yml
@@ -163,8 +163,10 @@ targets: #Other makefile target not strictly related to book. These targets will
   - name: pdf-all-uyuni
     pre_lang_prerequisite: configure-uyuni
 asciidoc:
+  - attribute: postgresql
+    value: 15
   - attribute: saltversion
-    value: 3006
+    value: 3006.0
   - attribute: sles-version
     value: 15
   - attribute:  sp-version
