--- a/parameters.yml
+++ b/parameters.yml
@@ -172,6 +172,8 @@ asciidoc:
   - attribute: saltversion
     value: 3006.0
   - attribute: postgresql
+    value: PostgreSQL
+  - attribute: postgresql-version
     value: 15
   - attribute: sles-version
     value: 15
