update GH action files for 4.3-MU-4.3.7

--- a/.github/workflows/translation_tests_cs_CZ.yml
+++ b/.github/workflows/translation_tests_cs_CZ.yml
@@ -3,7 +3,7 @@ name: translation_test_cs_cz
 on:
   push:
     branches:
-      - manager-4.3.7
+      - manager-4.3-MU-4.3.7
 
 env:
   LANG: "cs_CZ.UTF-8"
