--- a/parameters.yml
+++ b/parameters.yml
@@ -169,6 +169,8 @@ asciidoc:
     value: 3006.0
   - attribute: sles-version
     value: 15
+  - attribute: sp-base
+    value: SP4
   - attribute:  sp-version
     value: SP5 #use for normal text
   - attribute: sp-vert
