Fix chinese translation for chinese language selector (#2358)

--- a/parameters.yml
+++ b/parameters.yml
@@ -137,7 +137,7 @@ languages: #language parameters
     pdf_theme_uyuni: "uyuni-cjk"
     flag_svg_without_ext: "china"
     nation_in_eng: "china"
-    language_in_orig: "中国人"
+    language_in_orig: "中文"
     asciidoctor_pdf_additional_attributes: "-a scripts=cjk"
   - langcode: "ko"
     locale: "ko_KR.UTF-8"
