--- a/parameters.yml
+++ b/parameters.yml
@@ -350,10 +350,12 @@ asciidoc:
     value: 'icon:question[role="gray"]'
   - attribute: star
     value: 'icon:asterisk[role="none"]'
-  - attribute: salt
-    value: Salt
   - attribute: trad
     value: Traditional
+  - attribute: salt
+    value: Salt
+  - attribute: saltboot
+    value: Saltboot
   - attribute: imagesdir
     value: images
   - attribute: listing-caption
