--- a/parameters.yml
+++ b/parameters.yml
@@ -33,8 +33,10 @@ products:
         value: "SUSE Manager Documentation"
       - attribute: start_page
         value: suse-manager::index.adoc
+      # https://documentation.suse.com/suma/4.3/
+      # webui /
       - attribute: url
-        value: /
+        value: / 
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
