Added macro for Cobbler to avoid upper and lowercase inconistencies.

--- a/parameters.yml
+++ b/parameters.yml
@@ -297,6 +297,8 @@ asciidoc:
   - attribute: homepage
     value: https://github.com/uyuni-project/uyuni-docs/
     # Everything else
+  - attribute: cobbler
+    value: Cobbler
   - attribute: grub
     value: Grub
   - attribute: kickstart
