--- a/parameters.yml
+++ b/parameters.yml
@@ -289,6 +289,8 @@ asciidoc:
   - attribute: homepage
     value: https://github.com/uyuni-project/uyuni-docs/
     # Everything else 
+  - attribute: cobbler
+    value: Cobbler
   - attribute: grub
     value: Grub
   - attribute: kickstart
