updated naming, and antora.yml

--- a/parameters.yml
+++ b/parameters.yml
@@ -28,6 +28,7 @@ products:
       - name: "retail"
       - name: "common-workflows"
       - name: "specialized-guides"
+      - name: "pay-as-you-go"
     site:
       - attribute: title
         value: "SUSE Manager 4.3 Documentation"
