moved payg content into specialized guides, updated payg attribute

--- a/parameters.yml
+++ b/parameters.yml
@@ -28,7 +28,6 @@ products:
       - name: "retail"
       - name: "common-workflows"
       - name: "specialized-guides"
-      - name: "pay-as-you-go"
     site:
       - attribute: title
         value: "SUSE Manager 4.3 Documentation"
@@ -386,4 +385,4 @@ asciidoc:
   - attribute: doctype
     value: book
   - attribute: payg
-    value: Pay-as-you-go
+    value: PAYG
