update payg content and attributes

--- a/parameters.yml
+++ b/parameters.yml
@@ -20,13 +20,13 @@ products:
         value: true
 
     sections: #Used by configure script to create book targets for each language.
-      - name: "quickstart"
-      - name: "installation-and-upgrade"
-      - name: "client-configuration"
-      - name: "administration"
-      - name: "reference"
-      - name: "retail"
-      - name: "common-workflows"
+     # - name: "quickstart"
+     # - name: "installation-and-upgrade"
+     # - name: "client-configuration"
+     # - name: "administration"
+     # - name: "reference"
+     # - name: "retail"
+     # - name: "common-workflows"
       - name: "specialized-guides"
     site:
       - attribute: title
@@ -386,3 +386,9 @@ asciidoc:
     value: book
   - attribute: payg
     value: PAYG
+  - attribute: aws
+    value: AWS
+  - attribute: awsfull
+    value: Amazon Web Services
+    
+  
