--- a/parameters.yml
+++ b/parameters.yml
@@ -386,9 +386,15 @@ asciidoc:
     value: book
   - attribute: payg
     value: PAYG
+  - attribute: payglongform
+    value: Pay-as-you-go
   - attribute: aws
     value: AWS
-  - attribute: awsfull
+  - attribute: awslongform
     value: Amazon Web Services
-    
+  - attribute: gcp
+    value: GCP
+  - attribute: gcplongform
+    value: Google Cloud Compute
+
   
