--- a/parameters.yml
+++ b/parameters.yml
@@ -11,7 +11,9 @@ products:
       - attribute: docversion
         value: "4.3"
       - attribute: minorversion
-        value: "4.3.6"
+        value: "4.3.7"
+      - attribute: mureleaseversion
+        value: "4.3.7"
       - attribute: suma-content
         value: true
       - attribute: uyuni-content
