update document positions

--- a/parameters.yml
+++ b/parameters.yml
@@ -398,5 +398,12 @@ asciidoc:
     value: GCP
   - attribute: gcplongform
     value: Google Cloud Compute
+  - attribute: azure
+    value: Microsoft Azure
+  - attribute: byos
+    value: BYOS
+  - attribute: byoslongform
+    value: Bring-your-own-subscription
+
 
   
