fixed uyuni url var

--- a/parameters.yml
+++ b/parameters.yml
@@ -87,7 +87,7 @@ products:
       - attribute: start_page
         value: "uyuni::index.adoc"
       - attribute: url
-        value: /
+        value: https://www.uyuni-project.org/uyuni-docs/
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
