Backport439 sle15sp4 #2381 keichwa (#2499)
* revert

* 4.3.7 SP5 patch jcayouette (#2381)

* update

* adjusted versioning

* Update install-vm.adoc

* add entry

* Update .changelog

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

* minorversion

* Update .changelog

Co-authored-by: Marina Latini <marina.latini@suse.com>

* Update modules/installation-and-upgrade/pages/install-vm.adoc

* Update .changelog

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

Co-authored-by: Marina Latini <marina.latini@suse.com>

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

Co-authored-by: Marina Latini <marina.latini@suse.com>

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

* Update modules/installation-and-upgrade/pages/proxy-registration.adoc

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

* Update modules/quickstart/pages/quickstart-install-suma-proxy.adoc

---------

Co-authored-by: Joseph Cayouette <jcayouette@suse.com>
Co-authored-by: Marina Latini <marina.latini@suse.com>
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/parameters.yml
+++ b/parameters.yml
@@ -11,7 +11,7 @@ products:
       - attribute: docversion
         value: "4.3"
       - attribute: minorversion
-        value: "4.3.6"
+        value: "4.3.9"
       - attribute: suma-content
         value: true
       - attribute: uyuni-content
@@ -171,6 +171,8 @@ asciidoc:
     value: 3006.0
   - attribute: sles-version
     value: 15
+  - attribute: sp-base
+    value: SP4
   - attribute:  sp-version
     value: SP5 #use for normal text
   - attribute: sp-vert
