--- a/.github/workflows/main_uyuni.yml
+++ b/.github/workflows/main_uyuni.yml
@@ -3,7 +3,7 @@ name: build_test_deploy_uyuni
 on:
   push:
     branches:
-      - manager-4.3
+      - manager-4.3-MU-4.3.9
 
 env:
   LANG: "en_US.UTF-8"
