run ./update-cfg-files again

--- a/l10n-weblate/retail.cfg
+++ b/l10n-weblate/retail.cfg
@@ -27,6 +27,7 @@
 [type: asciidoc] modules/retail/pages/retail-install-unified.adoc $lang:translations/$lang/modules/retail/pages/retail-install-unified.adoc
 [type: asciidoc] modules/retail/pages/retail-install-uyuni.adoc $lang:translations/$lang/modules/retail/pages/retail-install-uyuni.adoc
 [type: asciidoc] modules/retail/pages/retail-mass-config.adoc $lang:translations/$lang/modules/retail/pages/retail-mass-config.adoc
+[type: asciidoc] modules/retail/pages/retail-mass-config-yaml.adoc $lang:translations/$lang/modules/retail/pages/retail-mass-config-yaml.adoc
 [type: asciidoc] modules/retail/pages/retail-network-arch.adoc $lang:translations/$lang/modules/retail/pages/retail-network-arch.adoc
 [type: asciidoc] modules/retail/pages/retail-next.adoc $lang:translations/$lang/modules/retail/pages/retail-next.adoc
 [type: asciidoc] modules/retail/pages/retail-offline.adoc $lang:translations/$lang/modules/retail/pages/retail-offline.adoc
