update setup section

--- a/antora.yml
+++ b/antora.yml
@@ -15,5 +15,12 @@ start_page: ROOT:index.adoc
 
 nav:
   - modules/ROOT/nav.adoc
+  - modules/quickstart/nav-quickstart-guide.adoc
+  - modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+  - modules/client-configuration/nav-client-configuration-guide.adoc
+  - modules/administration/nav-administration-guide.adoc
+  - modules/reference/nav-reference-guide.adoc
+  - modules/retail/nav-retail-guide.adoc
+  - modules/common-workflows/nav-common-workflows-guide.adoc
   - modules/specialized-guides/nav-specialized-guides-guide.adoc
 
