--- a/parameters.yml
+++ b/parameters.yml
@@ -22,13 +22,13 @@ products:
         value: true
 
     sections: #Used by configure script to create book targets for each language.
-     # - name: "quickstart"
-     # - name: "installation-and-upgrade"
-     # - name: "client-configuration"
-     # - name: "administration"
-     # - name: "reference"
-     # - name: "retail"
-     # - name: "common-workflows"
+      - name: "quickstart"
+      - name: "installation-and-upgrade"
+      - name: "client-configuration"
+      - name: "administration"
+      - name: "reference"
+      - name: "retail"
+      - name: "common-workflows"
       - name: "specialized-guides"
     site:
       - attribute: title
