--- a/parameters.yml
+++ b/parameters.yml
@@ -11,7 +11,9 @@ products:
       - attribute: docversion
         value: "4.3"
       - attribute: minorversion
-        value: "4.3.6"
+        value: "4.3.10"
+      - attribute: mureleaseversion
+        value: "4.3.10"
       - attribute: suma-content
         value: true
       - attribute: uyuni-content
@@ -387,4 +389,23 @@ asciidoc:
   - attribute: doctype
     value: book
   - attribute: payg
+    value: PAYG
+  - attribute: payglongform
     value: Pay-as-you-go
+  - attribute: aws
+    value: AWS
+  - attribute: awslongform
+    value: Amazon Web Services
+  - attribute: gcp
+    value: GCP
+  - attribute: gcplongform
+    value: Google Cloud Compute
+  - attribute: azure
+    value: Microsoft Azure
+  - attribute: byos
+    value: BYOS
+  - attribute: byoslongform
+    value: Bring-your-own-subscription
+
+
+  
