--- a/parameters.yml
+++ b/parameters.yml
@@ -36,7 +36,7 @@ products:
       # https://documentation.suse.com/suma/4.3/
       # webui /
       - attribute: url
-        value: / 
+        value: https://documentation.suse.com/suma/4.3/ 
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
@@ -50,7 +50,7 @@ products:
       # Modify the custom branding depending on your publishing endpoint
       # webui-branding-YYYY (use for OBS)
       # susecom-branding-YYYY (use for D.S.C)
-      supplemental_files: ./branding/supplemental-ui/suma/webui-2023
+      supplemental_files: ./branding/supplemental-ui/suma/susecom-2023
   uyuni:
     antora:
       name: "uyuni"
@@ -379,4 +379,20 @@ asciidoc:
   - attribute: doctype
     value: book
   - attribute: payg
+    value: PAYG
+  - attribute: payglongform
     value: Pay-as-you-go
+  - attribute: aws
+    value: AWS
+  - attribute: awslongform
+    value: Amazon Web Services
+  - attribute: gcp
+    value: GCP
+  - attribute: gcplongform
+    value: Google Cloud Compute
+  - attribute: azure
+    value: Microsoft Azure
+  - attribute: byos
+    value: BYOS
+  - attribute: byoslongform
+    value: Bring-your-own-subscription
