--- a/parameters.yml
+++ b/parameters.yml
@@ -378,5 +378,21 @@ asciidoc:
     value: left
   - attribute: doctype
     value: book
+  - attribute: byos
+    value: BYOS
+  - attribute: byoslongform
+    value: Bring-your-own-subscription
   - attribute: payg
+    value: PAYG
+  - attribute: payglongform
     value: Pay-as-you-go
+  - attribute: aws
+    value: AWS
+  - attribute: awslongform
+    value: Amazon Web Services
+  - attribute: gcp
+    value: GCP
+  - attribute: gcplongform
+    value: Google Cloud Compute
+  - attribute: azure
+    value: Microsoft Azure
