Added new variable for SLES documentation links.

--- a/parameters.yml
+++ b/parameters.yml
@@ -347,6 +347,9 @@ asciidoc:
     value: KVM
   - attribute: kube
     value: Kubernetes
+  #SLES dependant documentation links
+  - attribute: sles-base-os-documentation
+    value: https://documentation.suse.com/sles/15-SP4/html/SLES-all
     # Table icon entities
   - attribute: check
     value: 'icon:check[role="green"]'
