--- a/parameters.yml
+++ b/parameters.yml
@@ -36,7 +36,7 @@ products:
       # https://documentation.suse.com/suma/4.3/
       # webui /
       - attribute: url
-        value: https://documentation.suse.com/suma/4.3/ 
+        value: / 
     ui:
       bundle:
         # Modify the default ui depending on your publishing endpoint
@@ -50,7 +50,7 @@ products:
       # Modify the custom branding depending on your publishing endpoint
       # webui-branding-YYYY (use for OBS)
       # susecom-branding-YYYY (use for D.S.C)
-      supplemental_files: ./branding/supplemental-ui/suma/susecom-2023
+      supplemental_files: ./branding/supplemental-ui/suma/webui-2023
   uyuni:
     antora:
       name: "uyuni"
