--- a/.github/workflows/translation_tests_ko_KR.yml
+++ b/.github/workflows/translation_tests_ko_KR.yml
@@ -3,7 +3,7 @@ name: translation_test_ko_kr
 on:
   push:
     branches:
-      - manager-4.3
+      - manager-4.3-MU-4.3.10
 
 env:
   LANG: "ko_KR.UTF-8"
