Backport 4.3: manager50 vzhestkov improve tuning guide #24741 (#3182)
* Improve tuning guide (#3155)
* Add salt connectivity special guide
Co-authored-by: Karl Eichwalder <ke@suse.de>
* Update modules/specialized-guides/pages/large-deployments/tuning.adoc
* Update modules/specialized-guides/pages/salt/salt-connectivity.adoc
Co-authored-by: Victor Zhestkov <vzhestkov@suse.com>

--- a/l10n-weblate/specialized-guides.cfg
+++ b/l10n-weblate/specialized-guides.cfg
@@ -53,6 +53,7 @@
 [type: asciidoc] modules/specialized-guides/pages/qs-sap/prepare-server.adoc $lang:translations/$lang/modules/specialized-guides/pages/qs-sap/prepare-server.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-command.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-command.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-config-modules.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-config-modules.adoc
+[type: asciidoc] modules/specialized-guides/pages/salt/salt-connectivity.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-connectivity.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-custom-states.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-custom-states.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-file-locations.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-file-locations.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-bind.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-bind.adoc
@@ -66,6 +67,7 @@
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-tftpd.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-tftpd.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-virtualization-guest.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-virtualization-guest.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-virtualization-host.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-virtualization-host.adoc
+[type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-virtualization.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-virtualization.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-yomi.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-yomi.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formulas-custom.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formulas-custom.adoc
