--- a/parameters.yml
+++ b/parameters.yml
@@ -222,7 +222,7 @@ asciidoc:
     value: "SUSE Liberty Linux"
   - attribute: es
     value: Expanded Support
-  - attribute: micro
+  - attribute: sle-micro
     value: 'SLE Micro'
   - attribute: sl-micro
     value: 'SL Micro'
