--- a/l10n-weblate/administration.cfg
+++ b/l10n-weblate/administration.cfg
@@ -58,6 +58,7 @@
 [type: asciidoc] modules/administration/pages/troubleshooting/tshoot-autoinstallation.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-autoinstallation.adoc
 [type: asciidoc] modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-bootstrap-repo-for-eol-products.adoc
 [type: asciidoc] modules/administration/pages/troubleshooting/tshoot-cloned-salt-clients.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-cloned-salt-clients.adoc
+[type: asciidoc] modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-container-full-disk.adoc
 [type: asciidoc] modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
 [type: asciidoc] modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-custom-channel.adoc
 [type: asciidoc] modules/administration/pages/troubleshooting/tshoot-delclients.adoc $lang:translations/$lang/modules/administration/pages/troubleshooting/tshoot-delclients.adoc
