--- a/l10n-weblate/specialized-guides.cfg
+++ b/l10n-weblate/specialized-guides.cfg
@@ -71,6 +71,7 @@
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-tftpd.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-tftpd.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-virtualization-guest.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-virtualization-guest.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-virtualization-host.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-virtualization-host.adoc
+[type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-virtualization.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-virtualization.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-vsftpd.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-vsftpd.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formula-yomi.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formula-yomi.adoc
 [type: asciidoc] modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc $lang:translations/$lang/modules/specialized-guides/pages/salt/salt-formulas-by-product.adoc
