add ignition note and run ucf

--- a/l10n-weblate/installation-and-upgrade.cfg
+++ b/l10n-weblate/installation-and-upgrade.cfg
@@ -16,6 +16,7 @@
 [type: asciidoc] modules/installation-and-upgrade/pages/general-requirements.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/general-requirements.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/hardware-requirements.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/hardware-requirements.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/install-ibmz.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-ibmz.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/install-ignition.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-ignition.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/install-intro.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-intro.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/install-proxy-unified.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-proxy-unified.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
