--- a/parameters.yml
+++ b/parameters.yml
@@ -39,7 +39,7 @@ products:
       # For d.s.c use: https://documentation.suse.com/suma/5.0/
       # For the webui use: /
       - attribute: url
-        value: https://documentation.suse.com/suma/5.0/
+        value: /
     ui:
       bundle:
         - attribute: url
@@ -49,7 +49,7 @@ products:
           value: true
       # Adjusting this is not required anymore as this is handled
       # by the Makefile. Adjust the targets there if you need to
-      supplemental_files: ./branding/supplemental-ui/suma/susecom-2023
+      supplemental_files: ./branding/supplemental-ui/suma/webui-2023
   uyuni:
     antora:
       name: "uyuni"
