--- a/parameters.yml
+++ b/parameters.yml
@@ -59,9 +59,9 @@ products:
         - attribute: productname
           value: "Uyuni"
         - attribute: releaseversion
-          value: "2024.10"
+          value: "'2024.10'"
         - attribute: productnumber
-          value: "2024.10"
+          value: "'2024.10'"
         - attribute: suma-content
           value: false
         - attribute: uyuni-content
