--- a/parameters.yml
+++ b/parameters.yml
@@ -21,7 +21,7 @@ products:
           value: true
 
     sections: #Used by configure script to create book targets for each language.
-      - name: "quickstart"
+      #- name: "quickstart"
       - name: "installation-and-upgrade"
       - name: "client-configuration"
       - name: "administration"
