--- a/Makefile.section.functions
+++ b/Makefile.section.functions
@@ -1,65 +1,3 @@
-define pdf-quickstart-product
-	cd $(current_dir)
-	$(call pdf-book-create,$(1),$(2),$(3),$(4),$(5),quickstart,$(6),$(7),$(8),$(9),$(10))
-endef
-
-define pdf-quickstart-product-uyuni
-	cd $(current_dir)
-	$(call pdf-book-create-uyuni,$(1),$(2),$(3),$(4),$(5),quickstart,$(6),$(7),$(8),$(9),$(10))
-endef
-
-.PHONY: pdf-quickstart-index-en
-pdf-quickstart-index-en:
-	$(call pdf-book-create-index,translations/en,quickstart,en)
-
-.PHONY: pdf-quickstart-suma-en
-pdf-quickstart-suma-en: translations prepare-antora-suma-en pdf-quickstart-index-en
-	$(call pdf-quickstart-product,translations/en,suse,$(PRODUCTNAME_SUMA),$(SUMA_CONTENT),$(FILENAME_SUMA),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
-
-.PHONY: pdf-quickstart-uyuni-en
-pdf-quickstart-uyuni-en: translations prepare-antora-uyuni-en pdf-quickstart-index-en
-	$(call pdf-quickstart-product-uyuni,translations/en,uyuni,$(PRODUCTNAME_UYUNI),$(UYUNI_CONTENT),$(FILENAME_UYUNI),$(current_dir)/build/en/pdf,en,en_US.utf8,%B %d %Y,)
-
-
-.PHONY: pdf-quickstart-index-ja
-pdf-quickstart-index-ja:
-	$(call pdf-book-create-index,translations/ja,quickstart,ja)
-
-.PHONY: pdf-quickstart-suma-ja
-pdf-quickstart-suma-ja: translations prepare-antora-suma-ja pdf-quickstart-index-ja
-	$(call pdf-quickstart-product,translations/ja,suse-cjk,$(PRODUCTNAME_SUMA),$(SUMA_CONTENT),$(FILENAME_SUMA),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
-
-.PHONY: pdf-quickstart-uyuni-ja
-pdf-quickstart-uyuni-ja: translations prepare-antora-uyuni-ja pdf-quickstart-index-ja
-	$(call pdf-quickstart-product-uyuni,translations/ja,uyuni-cjk,$(PRODUCTNAME_UYUNI),$(UYUNI_CONTENT),$(FILENAME_UYUNI),$(current_dir)/build/ja/pdf,ja,ja_JP.UTF-8,%Y年%m月%e日,-a scripts=cjk)
-
-
-.PHONY: pdf-quickstart-index-zh_CN
-pdf-quickstart-index-zh_CN:
-	$(call pdf-book-create-index,translations/zh_CN,quickstart,zh_CN)
-
-.PHONY: pdf-quickstart-suma-zh_CN
-pdf-quickstart-suma-zh_CN: translations prepare-antora-suma-zh_CN pdf-quickstart-index-zh_CN
-	$(call pdf-quickstart-product,translations/zh_CN,suse-cjk,$(PRODUCTNAME_SUMA),$(SUMA_CONTENT),$(FILENAME_SUMA),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
-
-.PHONY: pdf-quickstart-uyuni-zh_CN
-pdf-quickstart-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-quickstart-index-zh_CN
-	$(call pdf-quickstart-product-uyuni,translations/zh_CN,uyuni-cjk,$(PRODUCTNAME_UYUNI),$(UYUNI_CONTENT),$(FILENAME_UYUNI),$(current_dir)/build/zh_CN/pdf,zh_CN,zh_CN.UTF-8,%Y年%m月%e日,-a scripts=cjk)
-
-
-.PHONY: pdf-quickstart-index-ko
-pdf-quickstart-index-ko:
-	$(call pdf-book-create-index,translations/ko,quickstart,ko)
-
-.PHONY: pdf-quickstart-suma-ko
-pdf-quickstart-suma-ko: translations prepare-antora-suma-ko pdf-quickstart-index-ko
-	$(call pdf-quickstart-product,translations/ko,suse-cjk,$(PRODUCTNAME_SUMA),$(SUMA_CONTENT),$(FILENAME_SUMA),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
-
-.PHONY: pdf-quickstart-uyuni-ko
-pdf-quickstart-uyuni-ko: translations prepare-antora-uyuni-ko pdf-quickstart-index-ko
-	$(call pdf-quickstart-product-uyuni,translations/ko,uyuni-cjk,$(PRODUCTNAME_UYUNI),$(UYUNI_CONTENT),$(FILENAME_UYUNI),$(current_dir)/build/ko/pdf,ko,ko_KR.UTF-8,%Y년%m월%e일,-a scripts=cjk)
-
-
 define pdf-installation-and-upgrade-product
 	cd $(current_dir)
 	$(call pdf-book-create,$(1),$(2),$(3),$(4),$(5),installation-and-upgrade,$(6),$(7),$(8),$(9),$(10))
@@ -559,26 +497,26 @@ pdf-legal-uyuni-ko: translations prepare-antora-uyuni-ko pdf-legal-index-ko
 
 # Generate PDF versions of all SUMA books
 .PHONY: pdf-all-suma-en
-pdf-all-suma-en: translations prepare-antora-suma-en pdf-quickstart-suma-en pdf-installation-and-upgrade-suma-en pdf-client-configuration-suma-en pdf-administration-suma-en pdf-reference-suma-en pdf-retail-suma-en pdf-common-workflows-suma-en pdf-specialized-guides-suma-en pdf-legal-suma-en 
+pdf-all-suma-en: translations prepare-antora-suma-en pdf-installation-and-upgrade-suma-en pdf-client-configuration-suma-en pdf-administration-suma-en pdf-reference-suma-en pdf-retail-suma-en pdf-common-workflows-suma-en pdf-specialized-guides-suma-en pdf-legal-suma-en 
 # Generate PDF versions of all UYUNI books
 .PHONY: pdf-all-uyuni-en
-pdf-all-uyuni-en: translations prepare-antora-uyuni-en pdf-quickstart-uyuni-en pdf-installation-and-upgrade-uyuni-en pdf-client-configuration-uyuni-en pdf-administration-uyuni-en pdf-reference-uyuni-en pdf-retail-uyuni-en pdf-common-workflows-uyuni-en pdf-specialized-guides-uyuni-en pdf-legal-uyuni-en 
+pdf-all-uyuni-en: translations prepare-antora-uyuni-en pdf-installation-and-upgrade-uyuni-en pdf-client-configuration-uyuni-en pdf-administration-uyuni-en pdf-reference-uyuni-en pdf-retail-uyuni-en pdf-common-workflows-uyuni-en pdf-specialized-guides-uyuni-en pdf-legal-uyuni-en 
 # Generate PDF versions of all SUMA books
 .PHONY: pdf-all-suma-ja
-pdf-all-suma-ja: translations prepare-antora-suma-ja pdf-quickstart-suma-ja pdf-installation-and-upgrade-suma-ja pdf-client-configuration-suma-ja pdf-administration-suma-ja pdf-reference-suma-ja pdf-retail-suma-ja pdf-common-workflows-suma-ja pdf-specialized-guides-suma-ja pdf-legal-suma-ja 
+pdf-all-suma-ja: translations prepare-antora-suma-ja pdf-installation-and-upgrade-suma-ja pdf-client-configuration-suma-ja pdf-administration-suma-ja pdf-reference-suma-ja pdf-retail-suma-ja pdf-common-workflows-suma-ja pdf-specialized-guides-suma-ja pdf-legal-suma-ja 
 # Generate PDF versions of all UYUNI books
 .PHONY: pdf-all-uyuni-ja
-pdf-all-uyuni-ja: translations prepare-antora-uyuni-ja pdf-quickstart-uyuni-ja pdf-installation-and-upgrade-uyuni-ja pdf-client-configuration-uyuni-ja pdf-administration-uyuni-ja pdf-reference-uyuni-ja pdf-retail-uyuni-ja pdf-common-workflows-uyuni-ja pdf-specialized-guides-uyuni-ja pdf-legal-uyuni-ja 
+pdf-all-uyuni-ja: translations prepare-antora-uyuni-ja pdf-installation-and-upgrade-uyuni-ja pdf-client-configuration-uyuni-ja pdf-administration-uyuni-ja pdf-reference-uyuni-ja pdf-retail-uyuni-ja pdf-common-workflows-uyuni-ja pdf-specialized-guides-uyuni-ja pdf-legal-uyuni-ja 
 # Generate PDF versions of all SUMA books
 .PHONY: pdf-all-suma-zh_CN
-pdf-all-suma-zh_CN: translations prepare-antora-suma-zh_CN pdf-quickstart-suma-zh_CN pdf-installation-and-upgrade-suma-zh_CN pdf-client-configuration-suma-zh_CN pdf-administration-suma-zh_CN pdf-reference-suma-zh_CN pdf-retail-suma-zh_CN pdf-common-workflows-suma-zh_CN pdf-specialized-guides-suma-zh_CN pdf-legal-suma-zh_CN 
+pdf-all-suma-zh_CN: translations prepare-antora-suma-zh_CN pdf-installation-and-upgrade-suma-zh_CN pdf-client-configuration-suma-zh_CN pdf-administration-suma-zh_CN pdf-reference-suma-zh_CN pdf-retail-suma-zh_CN pdf-common-workflows-suma-zh_CN pdf-specialized-guides-suma-zh_CN pdf-legal-suma-zh_CN 
 # Generate PDF versions of all UYUNI books
 .PHONY: pdf-all-uyuni-zh_CN
-pdf-all-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-quickstart-uyuni-zh_CN pdf-installation-and-upgrade-uyuni-zh_CN pdf-client-configuration-uyuni-zh_CN pdf-administration-uyuni-zh_CN pdf-reference-uyuni-zh_CN pdf-retail-uyuni-zh_CN pdf-common-workflows-uyuni-zh_CN pdf-specialized-guides-uyuni-zh_CN pdf-legal-uyuni-zh_CN 
+pdf-all-uyuni-zh_CN: translations prepare-antora-uyuni-zh_CN pdf-installation-and-upgrade-uyuni-zh_CN pdf-client-configuration-uyuni-zh_CN pdf-administration-uyuni-zh_CN pdf-reference-uyuni-zh_CN pdf-retail-uyuni-zh_CN pdf-common-workflows-uyuni-zh_CN pdf-specialized-guides-uyuni-zh_CN pdf-legal-uyuni-zh_CN 
 # Generate PDF versions of all SUMA books
 .PHONY: pdf-all-suma-ko
-pdf-all-suma-ko: translations prepare-antora-suma-ko pdf-quickstart-suma-ko pdf-installation-and-upgrade-suma-ko pdf-client-configuration-suma-ko pdf-administration-suma-ko pdf-reference-suma-ko pdf-retail-suma-ko pdf-common-workflows-suma-ko pdf-specialized-guides-suma-ko pdf-legal-suma-ko 
+pdf-all-suma-ko: translations prepare-antora-suma-ko pdf-installation-and-upgrade-suma-ko pdf-client-configuration-suma-ko pdf-administration-suma-ko pdf-reference-suma-ko pdf-retail-suma-ko pdf-common-workflows-suma-ko pdf-specialized-guides-suma-ko pdf-legal-suma-ko 
 # Generate PDF versions of all UYUNI books
 .PHONY: pdf-all-uyuni-ko
-pdf-all-uyuni-ko: translations prepare-antora-uyuni-ko pdf-quickstart-uyuni-ko pdf-installation-and-upgrade-uyuni-ko pdf-client-configuration-uyuni-ko pdf-administration-uyuni-ko pdf-reference-uyuni-ko pdf-retail-uyuni-ko pdf-common-workflows-uyuni-ko pdf-specialized-guides-uyuni-ko pdf-legal-uyuni-ko 
+pdf-all-uyuni-ko: translations prepare-antora-uyuni-ko pdf-installation-and-upgrade-uyuni-ko pdf-client-configuration-uyuni-ko pdf-administration-uyuni-ko pdf-reference-uyuni-ko pdf-retail-uyuni-ko pdf-common-workflows-uyuni-ko pdf-specialized-guides-uyuni-ko pdf-legal-uyuni-ko 
 
