--- a/parameters.yml
+++ b/parameters.yml
@@ -69,7 +69,7 @@ products:
         - attribute: page-pagination
           value: true
     sections: #Used by configure script to create book targets for each language.
-      - name: "quickstart"
+      #- name: "quickstart"
       - name: "installation-and-upgrade"
       - name: "client-configuration"
       - name: "administration"
