Upgrading and extending SCC parameters.

--- a/parameters.yml
+++ b/parameters.yml
@@ -336,7 +336,7 @@ asciidoc:
       value: Minimal
     - attribute: minimalsles
       value: Minimal SLES
-    - attribute: scc
+    - attribute: scclongform
       value: SUSE Customer Center
     - attribute: ncc
       value: Novell Customer Center
