Upgrading and extending SCC parameters (part 2).

--- a/parameters.yml
+++ b/parameters.yml
@@ -336,6 +336,8 @@ asciidoc:
       value: Minimal
     - attribute: minimalsles
       value: Minimal SLES
+    - attribute: scc
+      value: SCC
     - attribute: scclongform
       value: SUSE Customer Center
     - attribute: ncc
