--- a/parameters.yml
+++ b/parameters.yml
@@ -163,7 +163,7 @@ antora:
   extensions:
     - extension: "'@antora/lunr-extension'"
 asciidoc:
-  extensions: 
+  extensions:
     - extension: "'@asciidoctor/tabs'"
   attributes:
       # Base container image SUMA
@@ -261,6 +261,10 @@ asciidoc:
       value: CentOS
     - attribute: debian
       value: Debian
+    - attribute: oes
+      value: 'Open Enterprise Server'
+    - attribute: oesa
+      value: 'OES'
     - attribute: opensuse
       value: openSUSE
     - attribute: tumbleweed
