--- a/l10n-weblate/client-configuration.cfg
+++ b/l10n-weblate/client-configuration.cfg
@@ -35,6 +35,7 @@
 [type: asciidoc] modules/client-configuration/pages/clients-amazon.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-amazon.adoc
 [type: asciidoc] modules/client-configuration/pages/clients-centos.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-centos.adoc
 [type: asciidoc] modules/client-configuration/pages/clients-debian.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-debian.adoc
+[type: asciidoc] modules/client-configuration/pages/clients-oes.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-oes.adoc
 [type: asciidoc] modules/client-configuration/pages/clients-openeuler.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-openeuler.adoc
 [type: asciidoc] modules/client-configuration/pages/clients-opensuseleap.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-opensuseleap.adoc
 [type: asciidoc] modules/client-configuration/pages/clients-opensuseleapmicro.adoc $lang:translations/$lang/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -71,6 +72,7 @@
 [type: asciidoc] modules/client-configuration/pages/registration-overview-amazon.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-amazon.adoc
 [type: asciidoc] modules/client-configuration/pages/registration-overview-centos.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-centos.adoc
 [type: asciidoc] modules/client-configuration/pages/registration-overview-debian.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-debian.adoc
+[type: asciidoc] modules/client-configuration/pages/registration-overview-oes.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-oes.adoc
 [type: asciidoc] modules/client-configuration/pages/registration-overview-openeuler.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-openeuler.adoc
 [type: asciidoc] modules/client-configuration/pages/registration-overview-opensuse.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-opensuse.adoc
 [type: asciidoc] modules/client-configuration/pages/registration-overview-oracle.adoc $lang:translations/$lang/modules/client-configuration/pages/registration-overview-oracle.adoc
@@ -103,6 +105,7 @@
 [type: asciidoc] modules/client-configuration/pages/supported-features-amazon.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-amazon.adoc
 [type: asciidoc] modules/client-configuration/pages/supported-features-centos.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-centos.adoc
 [type: asciidoc] modules/client-configuration/pages/supported-features-debian.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-debian.adoc
+[type: asciidoc] modules/client-configuration/pages/supported-features-oes.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-oes.adoc
 [type: asciidoc] modules/client-configuration/pages/supported-features-openeuler.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-openeuler.adoc
 [type: asciidoc] modules/client-configuration/pages/supported-features-opensuse-leap-micro.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-opensuse-leap-micro.adoc
 [type: asciidoc] modules/client-configuration/pages/supported-features-oracle.adoc $lang:translations/$lang/modules/client-configuration/pages/supported-features-oracle.adoc
