--- a/parameters.yml
+++ b/parameters.yml
@@ -253,6 +253,10 @@ asciidoc:
     value: CentOS
   - attribute: debian
     value: Debian
+  - attribute: oes
+    value: 'Open Enterprise Server'
+  - attribute: oesa
+    value: 'OES'
   - attribute: opensuse
     value: openSUSE
   - attribute: oracle
