SLES to SLES For SAP product migration https://github.com/SUSE/spacewalk/issues/26050

--- a/parameters.yml
+++ b/parameters.yml
@@ -218,6 +218,8 @@ asciidoc:
       value: "SUSE Manager Proxy"
     - attribute: sles
       value: "SUSE Linux Enterprise Server"
+    - attribute: slesforsap
+      value: "SUSE Linux Enterprise Server for SAP Applications"
     - attribute: sled
       value: "SUSE Linux Enterprise Desktop"
     - attribute: sle
@@ -240,6 +242,8 @@ asciidoc:
       value: MicroOS
     - attribute: slsa
       value: SLES
+    - attribute: sls4sapa
+      value: "SLES for SAP"
     - attribute: suse
       value: SUSE
     - attribute: slea
