--- a/l10n-weblate/installation-and-upgrade.cfg
+++ b/l10n-weblate/installation-and-upgrade.cfg
@@ -11,6 +11,7 @@
 [type: asciidoc] modules/installation-and-upgrade/pages/client-intro.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/client-intro.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/connect-payg.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/connect-payg.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/register-proxy-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/register-proxy-suma.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/start_proxy.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/start_proxy.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/suma/proxy-air-gapped-deployment-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-air-gapped-deployment-suma.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
