--- a/parameters.yml
+++ b/parameters.yml
@@ -2,14 +2,14 @@ products:
   suma:
     antora:
       name: "suse-manager"
-      title: "SUSE Manager 5.0"
+      title: "SUSE Multi-Linux Manager 5.1"
     asciidoc:
       attributes:
         - attribute: productname
-          value: "SUSE Manager"
+          value: "SUSE Multi-Linux Manager"
         # Use single quotes inside double quotes to properly display float values. Zero values are dropped otherwise for example 5.0 = 5
         - attribute: productnumber
-          value: "'5.0'"
+          value: "5.1"
         # releaseversion is used to specify what version a user is looking at. In the future add :releaseversion: to each page header
         #- attribute: releaseversion
         #  value: "GMC"
@@ -32,7 +32,7 @@ products:
 
     site:
       - attribute: title
-        value: "SUSE Manager 5.0 Documentation"
+        value: "SUSE Multi-Linux Manager 5.1 Documentation"
       - attribute: start_page
         value: suse-manager::index.adoc
       # For d.s.c use: https://documentation.suse.com/suma/5.0/
@@ -205,7 +205,7 @@ asciidoc:
     - attribute: experimental
       value: true
     - attribute: susemgr
-      value: "SUSE Manager"
+      value: "SUSE Multi-Linux Manager"
     - attribute: smr
       value: "for Retail"
     - attribute: uyuni
@@ -213,7 +213,7 @@ asciidoc:
     - attribute: slepos
       value: "SUSE Linux Enterprise Point of Service"
     - attribute: susemgrproxy
-      value: "SUSE Manager Proxy"
+      value: "SUSE Multi-Linux Manager Proxy"
     - attribute: sles
       value: "SUSE Linux Enterprise Server"
     - attribute: slesforsap
