clean up and make install docs on proxy consistent (#3595)
* replace outdated and obsolete content with a stub to provide
an entry point for links.
https://bugzilla.suse.com/show_bug.cgi?id=1235567
https://github.com/SUSE/spacewalk/issues/26181

* new snippet: register
* new snippet: actkey
* sl micro version with proxy 5.1
* sl micro version with proxy 5.1 (vm*)
* use uyuni-proxy-squid-cache consistently
* add proxy persistent storage

Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/l10n-weblate/installation-and-upgrade.cfg
+++ b/l10n-weblate/installation-and-upgrade.cfg
@@ -10,7 +10,9 @@
 [type: asciidoc] modules/installation-and-upgrade/pages/_install-ibmz.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/_install-ibmz.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/client-intro.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/client-intro.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/connect-payg.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/connect-payg.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/actkey-bootstrap-proxy-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/actkey-bootstrap-proxy-suma.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/generate_proxy_config.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/register-proxy-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/register-proxy-suma.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/start_proxy.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/start_proxy.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/suma/proxy-air-gapped-deployment-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-air-gapped-deployment-suma.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
