--- a/Makefile.en
+++ b/Makefile.en
@@ -25,7 +25,7 @@ validate-suma-en:
 
 .PHONY: pdf-tar-suma-en
 pdf-tar-suma-en:
-	$(call pdf-tar-product,en,susemanager-docs_en-pdf,$(current_dir)/build/en/pdf)
+	$(call pdf-tar-product,en,suse-multi-linux-manager-docs_en-pdf,$(current_dir)/build/en/pdf)
 
 .PHONY: set-html-language-selector-suma-en
 set-html-language-selector-suma-en: set-html-language-selector-suma
@@ -53,7 +53,7 @@ antora-suma-en: configure-suma-branding-dsc-en prepare-antora-suma-en pdf-all-su
 
 .PHONY: obs-packages-suma-en
 obs-packages-suma-en: configure-suma-branding-webui-en pdf-all-suma-en antora-suma-en ## Generate SUMA OBS tar files
-	$(call obs-packages-product,en,en/pdf,susemanager-docs_en,susemanager-docs_en-pdf)
+	$(call obs-packages-product,en,en/pdf,suse-multi-linux-manager-docs_en,suse-multi-linux-manager-docs_en-pdf)
 
 # UYUNI
 
