--- a/Makefile.ko
+++ b/Makefile.ko
@@ -25,7 +25,7 @@ validate-suma-ko:
 
 .PHONY: pdf-tar-suma-ko
 pdf-tar-suma-ko:
-	$(call pdf-tar-product,ko,susemanager-docs_ko-pdf,$(current_dir)/build/ko/pdf)
+	$(call pdf-tar-product,ko,suse-multi-linux-manager-docs_ko-pdf,$(current_dir)/build/ko/pdf)
 
 .PHONY: set-html-language-selector-suma-ko
 set-html-language-selector-suma-ko: set-html-language-selector-suma
@@ -53,7 +53,7 @@ antora-suma-ko: configure-suma-branding-dsc-ko prepare-antora-suma-ko pdf-all-su
 
 .PHONY: obs-packages-suma-ko
 obs-packages-suma-ko: configure-suma-branding-webui-ko pdf-all-suma-ko antora-suma-ko ## Generate SUMA OBS tar files
-	$(call obs-packages-product,ko,ko/pdf,susemanager-docs_ko,susemanager-docs_ko-pdf)
+	$(call obs-packages-product,ko,ko/pdf,suse-multi-linux-manager-docs_ko,suse-multi-linux-manager-docs_ko-pdf)
 
 # UYUNI
 
