--- a/parameters.yml
+++ b/parameters.yml
@@ -1,7 +1,7 @@
 products:
   suma:
     antora:
-      name: "suse-manager"
+      name: "docs"
       title: "SUSE Multi-Linux Manager 5.1"
     asciidoc:
       attributes:
@@ -34,7 +34,7 @@ products:
       - attribute: title
         value: "SUSE Multi-Linux Manager 5.1 Documentation"
       - attribute: start_page
-        value: suse-manager::index.adoc
+        value: docs::index.adoc
       # For d.s.c use: https://documentation.suse.com/suma/5.0/
       # For the webui use: /
       - attribute: url
