--- a/Makefile.ja
+++ b/Makefile.ja
@@ -25,7 +25,7 @@ validate-suma-ja:
 
 .PHONY: pdf-tar-suma-ja
 pdf-tar-suma-ja:
-	$(call pdf-tar-product,ja,susemanager-docs_ja-pdf,$(current_dir)/build/ja/pdf)
+	$(call pdf-tar-product,ja,suse-multi-linux-manager-docs_ja-pdf,$(current_dir)/build/ja/pdf)
 
 .PHONY: set-html-language-selector-suma-ja
 set-html-language-selector-suma-ja: set-html-language-selector-suma
@@ -53,7 +53,7 @@ antora-suma-ja: configure-suma-branding-dsc-ja prepare-antora-suma-ja pdf-all-su
 
 .PHONY: obs-packages-suma-ja
 obs-packages-suma-ja: configure-suma-branding-webui-ja pdf-all-suma-ja antora-suma-ja ## Generate SUMA OBS tar files
-	$(call obs-packages-product,ja,ja/pdf,susemanager-docs_ja,susemanager-docs_ja-pdf)
+	$(call obs-packages-product,ja,ja/pdf,suse-multi-linux-manager-docs_ja,suse-multi-linux-manager-docs_ja-pdf)
 
 # UYUNI
 
