--- a/Makefile.zh_CN
+++ b/Makefile.zh_CN
@@ -25,7 +25,7 @@ validate-suma-zh_CN:
 
 .PHONY: pdf-tar-suma-zh_CN
 pdf-tar-suma-zh_CN:
-	$(call pdf-tar-product,zh_CN,susemanager-docs_zh_CN-pdf,$(current_dir)/build/zh_CN/pdf)
+	$(call pdf-tar-product,zh_CN,suse-multi-linux-manager-docs_zh_CN-pdf,$(current_dir)/build/zh_CN/pdf)
 
 .PHONY: set-html-language-selector-suma-zh_CN
 set-html-language-selector-suma-zh_CN: set-html-language-selector-suma
@@ -53,7 +53,7 @@ antora-suma-zh_CN: configure-suma-branding-dsc-zh_CN prepare-antora-suma-zh_CN p
 
 .PHONY: obs-packages-suma-zh_CN
 obs-packages-suma-zh_CN: configure-suma-branding-webui-zh_CN pdf-all-suma-zh_CN antora-suma-zh_CN ## Generate SUMA OBS tar files
-	$(call obs-packages-product,zh_CN,zh_CN/pdf,susemanager-docs_zh_CN,susemanager-docs_zh_CN-pdf)
+	$(call obs-packages-product,zh_CN,zh_CN/pdf,suse-multi-linux-manager-docs_zh_CN,suse-multi-linux-manager-docs_zh_CN-pdf)
 
 # UYUNI
 
