--- a/Makefile.ko
+++ b/Makefile.ko
@@ -53,7 +53,7 @@ antora-suma-ko: configure-suma-branding-dsc-ko prepare-antora-suma-ko pdf-all-su
 
 .PHONY: obs-packages-suma-ko
 obs-packages-suma-ko: configure-suma-branding-webui-ko pdf-all-suma-ko antora-suma-ko ## Generate SUMA OBS tar files
-	$(call obs-packages-product,ko,ko/pdf,suse-multi-linux-manager-docs_ko,suse-multi-linux-manager-docs_ko-pdf)
+	$(call obs-packages-product,ko,ko/pdf,susemanager-docs_ko,susemanager-docs_ko-pdf)
 
 # UYUNI
 
