--- a/Makefile.zh_CN
+++ b/Makefile.zh_CN
@@ -53,7 +53,7 @@ antora-suma-zh_CN: configure-suma-branding-dsc-zh_CN prepare-antora-suma-zh_CN p
 
 .PHONY: obs-packages-suma-zh_CN
 obs-packages-suma-zh_CN: configure-suma-branding-webui-zh_CN pdf-all-suma-zh_CN antora-suma-zh_CN ## Generate SUMA OBS tar files
-	$(call obs-packages-product,zh_CN,zh_CN/pdf,suse-multi-linux-manager-docs_zh_CN,suse-multi-linux-manager-docs_zh_CN-pdf)
+	$(call obs-packages-product,zh_CN,zh_CN/pdf,susemanager-docs_zh_CN,susemanager-docs_zh_CN-pdf)
 
 # UYUNI
 
