--- a/l10n-weblate/installation-and-upgrade.cfg
+++ b/l10n-weblate/installation-and-upgrade.cfg
@@ -49,6 +49,7 @@
 [type: asciidoc] modules/installation-and-upgrade/pages/hardware-requirements.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/hardware-requirements.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/install-proxy.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-proxy.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/install-pubcloud.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-pubcloud.adoc
+[type: asciidoc] modules/installation-and-upgrade/pages/install-server.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/install-server.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/installation-and-upgrade-overview.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/network-requirements.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/network-requirements.adoc
 [type: asciidoc] modules/installation-and-upgrade/pages/proxy-registration.adoc $lang:translations/$lang/modules/installation-and-upgrade/pages/proxy-registration.adoc
