--- a/parameters.yml
+++ b/parameters.yml
@@ -10,6 +10,8 @@ products:
         # Use single quotes inside double quotes to properly display float values. Zero values are dropped otherwise for example 5.0 = 5
         - attribute: productnumber
           value: "5.1"
+        - attribute: currentyear
+          value: "2025"
         # releaseversion is used to specify what version a user is looking at. In the future add :releaseversion: to each page header
         #- attribute: releaseversion
         #  value: "GMC"
